cmake_minimum_required(VERSION 3.22)
project("Mashroom serialization tests")

enable_testing()

add_executable(Mashroom_serialize_test mashroom_serialization.cpp)
add_executable(Mashroom_messages_test mashroom_messages.cpp)
add_executable(Mashroom_data_test mashroom_data_test.cpp)
add_executable(Mashroom_data_exchange_test mashroom_data_exchange_test.cpp)
add_executable(Mashroom_index_test mashroom_index_test.cpp)
add_executable(Mashroom_parse_test mashroom_parse_test.cpp)
target_link_libraries(Mashroom_serialize_test PUBLIC GIAPI PUBLIC GTest::gtest Mashroom_lib)
target_link_libraries(Mashroom_messages_test PUBLIC GIAPI PUBLIC GTest::gtest Mashroom_lib)
target_link_libraries(Mashroom_data_test PUBLIC GIAPI PUBLIC GTest::gtest Mashroom_lib)
target_link_libraries(Mashroom_data_exchange_test PUBLIC GIAPI PUBLIC GTest::gtest Mashroom_lib)
target_link_libraries(Mashroom_index_test PUBLIC GTest::gtest Mashroom_lib)
target_link_libraries(Mashroom_parse_test PUBLIC GTest::gtest Mashroom_lib)

add_subdirectory(extract_test)

message(STATUS "Current bin: ${CMAKE_CURRENT_BINARY_DIR}")
gtest_discover_tests(Mashroom_serialize_test WORKING_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR})
gtest_discover_tests(Mashroom_messages_test WORKING_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR})
gtest_discover_tests(Mashroom_data_test WORKING_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR})
gtest_discover_tests(Mashroom_data_exchange_test WORKING_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR})
gtest_discover_tests(Mashroom_index_test WORKING_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR})
gtest_discover_tests(Mashroom_parse_test WORKING_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR})